--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           port: ${{ secrets.PORT }}
-          key: ${{ secrets.KEY }}
+          fingerprint: ${{ secrets.KEY }}
           script: |
             ls -al
             whoami
