--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,5 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           port: ${{ secrets.PORT }}
-          fingerprint: ${{ secrets.KEY }}
-          script: |
-            ls -al
-            whoami
+          key: ${{ secrets.KEY }}
+          script: whoami
