--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,13 +11,17 @@
     "build": "tsc -p ."
   },
   "dependencies": {
+    "argon2": "^0.27.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.9"
   },
   "devDependencies": {
+    "@types/argon2": "^0.15.0",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.7",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
