Finished User Auth

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,9 @@ jobs:
         uses: SpicyPizza/create-envfile@v1
         with:
           envkey_DB_URI: ${{ secrets.DB_URI }}
+          envkey_ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
+          envkey_REFRESH_TOKEN_SECRET: ${{ secrets.REFRESH_TOKEN_SECRET }}
+          envkey_REDIS_URL: ${{ secrets.REDIS_URL }}
           envkey_COMPOSE_PROJECT_NAME: hw-api
           file_name: .env
       - name: Copy Build files
