--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,10 @@ services:
       - 8080:8000
     env_file:
       - ./.env
+  redis:
+    image: redis:alpine
+    container_name: redis
+    expose:
+      - 6379
+    volumes: ["/data/redis:/data"]
+    command: ["redis-server", "--appendonly", "yes"]
