--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,12 +15,16 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "ioredis": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9"
   },
   "devDependencies": {
     "@types/argon2": "^0.15.0",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
+    "@types/ioredis": "^4.17.5",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.7",
     "nodemon": "^2.0.4",
