--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
           key: ${{ secrets.KEY }}
           username: ${{ secrets.USERNAME }}
           script: |
-            sudo docker stop app
+            sudo docker-compose down
             sudo docker rm app
             sudo docker rmi satvikr/hw-api:latest
             sudo docker-compose up -d
