--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "next": "9.5.5",
     "react": "16.14.0",
-    "react-dom": "16.14.0"
+    "react-dom": "16.14.0",
+    "swr": "^0.3.5"
   },
   "devDependencies": {
     "@types/node": "^14.11.7",
