--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "scripts": {
     "start": "node ./dist/server.js",
-    "dev": "nodemon ./src/server.ts",
+    "dev": "concurrently \"tsc -w -p .\" \"nodemon ./dist/server.js\"",
     "build": "tsc -p ."
   },
   "dependencies": {
@@ -27,6 +27,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.7",
+    "concurrently": "^5.3.0",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
