--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,14 +9,17 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "formik": "^2.2.0",
     "next": "9.5.5",
     "react": "16.14.0",
     "react-dom": "16.14.0",
-    "swr": "^0.3.5"
+    "swr": "^0.3.5",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@types/node": "^14.11.7",
     "@types/react": "^16.9.51",
+    "@types/yup": "^0.29.8",
     "typescript": "^4.0.3"
   }
 }
