added image upload route

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,7 @@ jobs:
           envkey_REDIS_URL: ${{ secrets.REDIS_URL }}
           envkey_ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
           envkey_SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          envkey_REGION: ${{ secrets.REGION }}
           envkey_COMPOSE_PROJECT_NAME: hw-api
           file_name: .env
       - name: Copy Build files
