--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "argon2": "^0.27.0",
+    "aws-sdk": "^2.774.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.9"
+    "mongoose": "^5.10.9",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0"
   },
   "devDependencies": {
     "@types/argon2": "^0.15.0",
@@ -26,6 +29,8 @@
     "@types/ioredis": "^4.17.5",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
+    "@types/multer": "^1.4.4",
+    "@types/multer-s3": "^2.7.8",
     "@types/node": "^14.11.7",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.4",
