--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,6 +13,7 @@
     "next": "9.5.5",
     "react": "16.14.0",
     "react-dom": "16.14.0",
+    "react-dropzone": "^11.2.0",
     "swr": "^0.3.5",
     "yup": "^0.29.3"
   },
