--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "formik": "^2.2.0",
-    "next": "9.5.5",
+    "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-dropzone": "^11.2.0",
